--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 html {
-    background-color: #15141f;
+    background-color: #pink;
     color: grey; 
 }
 
@@ -20,7 +20,7 @@ nav {
   nav button:active{
       top: 2px;
   }
-  
+
   nav li{
       display: inline;
       margin: 10;
@@ -43,7 +43,7 @@ nav {
     line-height: 60px;
     color: white;
     text-decoration: none;
-    
+
   }
 
   nav li:active {
@@ -64,6 +64,3 @@ position: relative;
 header a:active{
 top: 1px;
 }
-
-
-
