--- a/main.css
+++ b/main.css
@@ -1,55 +1,8 @@
-html {
-    background-color: #pink;
-    color: grey; 
+body {
+  background-color: black;
+  color: white
 }
 
-nav {
-    background-color:gray;
-    line-height: 60px;
-  }
-
-  nav button{
-      background-color: black;
-      color: white;
-      position: relative;
-      height: 40px;
-      text-decoration: none;
-      cursor: pointer;
-
-  }
-  nav button:active{
-      top: 2px;
-  }
-
-  nav li{
-      display: inline;
-      margin: 10;
-      padding: 10px 45px;
-
-  }
-/*           you need to figure out how to style the buttons, so not only the words, but the buttons can be clicked to open new webpage :).
-  nav li {
-    display: inline;
-    margin: 10;
-    padding: 10px 45px;
-    border: 1px solid black;
-    cursor: pointer;
-    position: relative;
-
-  }
-
-  nav a {
-    height: 20px;
-    line-height: 60px;
-    color: white;
-    text-decoration: none;
-
-  }
-
-  nav li:active {
-    top: 2px;
-  }
-*/
 header a {
 font-size: 45px;
 display: flex;
