--- a/main.css
+++ b/main.css
@@ -16,20 +16,22 @@ html {
 .headerLink {
   text-align: center;
   font-size: 45px;
-  background-image: url(https://bernardsvillefire.org/wp-content/uploads/2018/07/american-flag-header-bkgd.jpg);
+  background-image: url(https://raw.githubusercontent.com/Schwartzyy55/Schwartzyy55.github.io/master/pictures/usa.jpg);
   background-size: cover;
   display: inline-block;
   width: 100%;
   height: 30%;
+  filter: brightness(80%);
+
 }
 .headerLink a {
   text-decoration: none;
-  color:white;
+  color: honeydew;
+  text-shadow: 1px 1px 2px black;
 }
 /* Simulate headerLink hover  */
 .headerLink a:hover {
-  text-shadow:1px 1px 2px slategrey;
-  filter:brightness(150%);
+  text-shadow:2px 2px 3px black;
 }
 /* Simulate headerLink click  */
 .headerLink a:active {
@@ -42,18 +44,17 @@ html {
   background-color: rgb(53, 57, 61);
   margin-top: 0;
   padding: 5 5;
-  display: inline-block;
   width: 100%;
+  text-align: center;
 }
 .panel ol {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0 auto;
   padding-top: 16px;
   padding-bottom: 16px;
+  display: inline-block;
 }
 .panel li {
   display: inline;
-  margin: 50
 }
 .panel a {
   text-decoration: none;
@@ -61,6 +62,7 @@ html {
   font-size: 25px;
   margin: 10;
   padding: 10px 45px;
+  border: solid darkgrey;
 }
 .panel a:hover {
   color: gray;
